[tool.poetry]
name = "fastyql-skeleton"
version = "0.1.0"
description = "Simple FastAPI echo server"
authors = ["User"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
graphene = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"